2010-05-29  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14517: Set focus on pagetree filter input field (Thanks to Sebastian Gebhard)
	* Fixed bug #14513: Improve rendering of icons in t3-row-header (Thanks to Steffen Gebert)
	* Follow-up to feature #14490: Add missing styles of login box (Thanks to Steffen Gebert)
	* Fixed bug #14510: Increase width of module menu and navigation frame (Thanks to Steffen Gebert)

2010-05-29  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14518: HCI: Page "with root-flag" set should have "domain"-icon (Thanks to Steffen Ritter)
	* Fixed bug #14519: Toolbar menuitems alignment
	* Fixed bug #14512: Remove "bigButtons" by default in Page module (Thanks to Steffen Gebert)
	* Fixed bug #10377: Cleaning and linting typo3/js-scripts
	* Fixed bug #14523: Missing icons in workspace modules

2010-05-29  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14488: prioriCalc no longer working correctly (thanks to Franz Koch)

2010-05-29  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to feature #14490: wrong position of stop page tree icon & cursor:pointer for IE6 icons
	* Follow-up to feature #14506: Fixes for alt_db_navframe (page tree filter - missing JS file) (Thanks to Steffen Gebert)

2010-05-28  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11503: HTML5 doctype implementation
	* Follow-up to feature #14506: Fixes for alt_db_navframe (page tree filter) (Thanks to Steffen Gebert)
	* Follow-up to feature #14490: forgotten css file
	* Follow-up to feature #14490: A new skin for the TYPO3 Backend (Thanks to Steffen Gebert and Lars Zimmermann)
	* Fixed bug #14506: Fixes for alt_db_navframe (page tree filter) (Thanks to Steffen Gebert)
	* Fixed bug #14462: Remove old_backend

2010-05-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14503: HTML is shown in sysext belog after the usage of the sprite api for icons (thanks to Andy Grunwald)